# logistics-data-pipeline

./: README.md  distance.py  pyproject.toml  settings.py
files/: FREIGHT DISTANCE.csv  FREIGHT DISTANCE.xlsx  output.xlsx
